# modules/apps/portal-security-audit/portal-security-audit-rest-impl/rest-openapi.yaml
@@ -108,10 +108,6 @@ paths:
                     schema:
                         type: string
                 -   in: query
-                    name: filter
-                    schema:
-                        type: string
-                -   in: query
                     name: page
                     schema:
                         type: integer
@@ -120,10 +116,6 @@ paths:
                     schema:
                         type: integer
                 -   in: query
-                    name: search
-                    schema:
-                        type: string
-                -   in: query
                     name: sort
                     schema:
                         type: string
@@ -131,10 +123,6 @@ paths:
                     name: startDate
                     schema:
                         format: date-time
-                        type: string
-                -   in: header
-                    name: Accept-Language
-                    schema:
                         type: string
             responses:
                 200:
@@ -172,10 +160,6 @@ paths:
                     schema:
                         type: string
                 -   in: query
-                    name: filter
-                    schema:
-                        type: string
-                -   in: query
                     name: page
                     schema:
                         type: integer
@@ -184,10 +168,6 @@ paths:
                     schema:
                         type: integer
                 -   in: query
-                    name: search
-                    schema:
-                        type: string
-                -   in: query
                     name: sort
                     schema:
                         type: string
@@ -195,10 +175,6 @@ paths:
                     name: startDate
                     schema:
                         format: date-time
-                        type: string
-                -   in: header
-                    name: Accept-Language
-                    schema:
                         type: string
             responses:
                 200:
